--- a/Example/package.json
+++ b/Example/package.json
@@ -7,14 +7,20 @@
     "test": "jest"
   },
   "dependencies": {
-    "react": "16.8.3",
-    "react-native": "0.59.9"
+    "react": "^16.8.3",
+    "react-native": "^0.59.10",
+    "react-native-sound": "^0.11.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.3.3",
+    "@babel/core": "^7.4.3",
+    "@babel/runtime": "^7.4.3",
+    "@types/jest": "^24.0.11",
+    "@types/react": "^16.8.13",
+    "@types/react-native": "^0.60.11",
+    "@types/react-test-renderer": "^16.8.1",
     "babel-jest": "24.8.0",
     "jest": "24.8.0",
-    "metro-react-native-babel-preset": "^0.51.1",
+    "metro-react-native-babel-preset": "^0.53.1",
     "react-native-twilio-video-webrtc": "file:../",
     "react-test-renderer": "16.8.3"
   },
