--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,9 +1,9 @@
 apply plugin: 'com.android.library'
 
-def DEFAULT_COMPILE_SDK_VERSION             = 27
-def DEFAULT_BUILD_TOOLS_VERSION             = "27.0.3"
-def DEFAULT_TARGET_SDK_VERSION              = 27
-def DEFAULT_ANDROID_SUPPORT_VERSION         = "27.1.0"
+def DEFAULT_COMPILE_SDK_VERSION             = 28
+def DEFAULT_BUILD_TOOLS_VERSION             = "28.0.3"
+def DEFAULT_TARGET_SDK_VERSION              = 28
+def DEFAULT_ANDROID_SUPPORT_VERSION         = "28.1.0"
 
 android {
     compileSdkVersion rootProject.hasProperty('compileSdkVersion') ? rootProject.compileSdkVersion : DEFAULT_COMPILE_SDK_VERSION
@@ -51,5 +51,6 @@ dependencies {
     implementation "com.android.support:appcompat-v7:$androidSupportVersion"
     implementation "com.twilio:video-android:5.5.0"
     implementation 'org.webrtc:google-webrtc:1.0.+'
+    implementation "com.twilio:audioswitch:0.1.5"
     implementation "com.facebook.react:react-native:+"  // From node_modules
 }
