--- a/Example/android/app/build.gradle
+++ b/Example/android/app/build.gradle
@@ -67,6 +67,14 @@ import com.android.build.OutputFile
 
 apply from: "../../node_modules/react-native/react.gradle"
 
+project.ext.react = [
+    enableHermes: false,
+]
+
+def jscFlavor = 'org.webkit:android-jsc:+'
+
+def enableHermes = project.ext.react.get("enableHermes", false);
+
 /**
  * Set this to true to create two separate APKs instead of one:
  *   - An APK that only works on ARM devices
@@ -134,6 +142,16 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.0.0'
     implementation "com.facebook.react:react-native:+"  // From node_modules
     implementation project(':react-native-twilio-video-webrtc')
+
+    if (enableHermes) {
+        // for RN 0.61+
+        def hermesPath = "../../node_modules/hermes-engine/android/";
+
+        debugImplementation files(hermesPath + "hermes-debug.aar")
+        releaseImplementation files(hermesPath + "hermes-release.aar")
+    } else {
+        implementation jscFlavor
+    }
 }
 
 // Run this once to be able to run the application with BUCK
