--- a/Example/ios/Podfile
+++ b/Example/ios/Podfile
@@ -3,12 +3,21 @@ source 'https://github.com/CocoaPods/Specs.git'
 
 platform :ios, '11.0'
 
+require_relative '../node_modules/react-native/scripts/react_native_pods'
+require_relative '../node_modules/@react-native-community/cli-platform-ios/native_modules'
+
+def default_pods
+
+  config = use_native_modules!
+
+  use_react_native!(
+      :path => config[:reactNativePath],
+      # to enable hermes on iOS, change `false` to `true` and then install pods
+      :hermes_enabled => false
+  )
+end
+
+
 target 'Example' do
-  pod 'yoga', path: '../node_modules/react-native/ReactCommon/yoga'
-  pod 'React', path: '../node_modules/react-native', :subspecs => [
-    'Core',
-    'CxxBridge'
-  ]
-  pod 'react-native-twilio-video-webrtc', path: '../../'
-  pod 'Folly', podspec: '../node_modules/react-native/third-party-podspecs/Folly.podspec'
+  default_pods
 end
